tree data source

--- a/projects/icc/tree/src/components/flat-tree/flat-tree.component.html
+++ b/projects/icc/tree/src/components/flat-tree/flat-tree.component.html
@@ -1,4 +1,4 @@
-<cdk-tree *ngIf="dataSource" #tree [dataSource]="dataSource" [childrenAccessor]="childrenAccessor">
+<cdk-tree *ngIf="dataSource.data.length > 0" #tree [dataSource]="dataSource" [childrenAccessor]="childrenAccessor">
   <!-- This is the tree node template for leaf nodes -->
   <cdk-tree-node
     *cdkTreeNodeDef="let node"
