add tree state and service

--- a/projects/icc/tree/src/components/flat-tree/flat-tree.component.html
+++ b/projects/icc/tree/src/components/flat-tree/flat-tree.component.html
@@ -32,3 +32,13 @@
     {{ node.name }}
   </cdk-tree-node>
 </cdk-tree>
+
+<!--
+<cdk-virtual-scroll-viewport itemSize="50">
+  <ng-container *cdkVirtualFor="let node of flatTreeData">
+    <div [style.padding-left]="node.level * 20 + 'px'">
+      {{ node.name }} 
+    </div>
+  </ng-container>
+</cdk-virtual-scroll-viewport>
+-->
