--- a/projects/icc/tree/src/components/tree-view.component.html
+++ b/projects/icc/tree/src/components/tree-view.component.html
@@ -26,25 +26,13 @@
   (scroll)="onViewportScroll($event)"
 >
   <ng-container *ngIf="treeData$ | async as treeData">
-    <icc-flat-tree [columns]="columns" [treeData]="treeData"></icc-flat-tree>
-    <!--
-
-    <cdk-virtual-scroll-viewport itemSize="50">
-      <ng-container *cdkVirtualFor="let node of flatTreeData">
-        <div [style.padding-left]="node.level * 20 + 'px'">
-          {{ node.name }} 
-        </div>
-      </ng-container>
-    </cdk-virtual-scroll-viewport>
-
-    <icc-grid-row
+    <icc-tree-row
       [ngStyle]="{ 'grid-template-columns': gridTemplateColumns }"
       *cdkVirtualFor="let record of treeData; trackBy: trackByIndex; let index = index"
-      [gridConfig]="treeConfig"
+      [treeConfig]="treeConfig"
       [columns]="columns"
       [record]="record"
     >
-    </icc-grid-row>
-        -->
+    </icc-tree-row>
   </ng-container>
 </cdk-virtual-scroll-viewport>
