--- a/projects/icc/tree/src/tree.component.scss
+++ b/projects/icc/tree/src/tree.component.scss
@@ -4,11 +4,10 @@
   width: 100%;
   height: -webkit-fill-available;
 
-  /*
   .icc-grid-toolbar {
     display: flex;
     height: 32px; // TODO move to theme
     align-items: center;
     justify-content: center;
-  }*/
+  }
 }
