--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="gridConfig$ | async as gridConfig">
   <ng-container *ngIf="columnsConfig$ | async as columns">
     <div class="icc-grid-toolbar" *ngIf="!gridConfig.hideTopbar">
-      <button icc-button (click)="refresh()">
+      <button icc-button (click)="refresh(gridConfig)">
         <icc-icon [icon]="buttons[0].icon!"></icc-icon>
         {{ buttons[0].title | translate }}
       </button>
