--- a/projects/icc/tree/src/components/tree-row/tree-node/tree-node.component.scss
+++ b/projects/icc/tree/src/components/tree-row/tree-node/tree-node.component.scss
@@ -3,15 +3,24 @@
   width: 100%;
 
   .tree-node {
+    display: flex;
     align-items: center;
     text-overflow: ellipsis;
     overflow-x: hidden;
     white-space: nowrap;
-  }
 
-  icc-icon {
-    width: 7px;
-    padding-right: 0px;
-    vertical-align: 0;
+    icc-icon {
+      padding-right: 0px;
+      vertical-align: 0;
+      padding-left: 4px;
+    }
+
+    .tree-node-icon {
+      padding-left: 5px;
+    }
+
+    .tree-node-text {
+      padding-left: 5px;
+    }
   }
 }
