tree node drag and drop

--- a/projects/icc/tree/src/components/tree-view.component.html
+++ b/projects/icc/tree/src/components/tree-view.component.html
@@ -27,6 +27,7 @@
         [treeConfig]="treeConfig"
         [columns]="columns"
         [record]="record"
+        [cdkDragDisabled]="dragDisabled"
         cdkDrag
         (cdkDragStarted)="dragStart(record)"
         (cdkDragMoved)="dragMoved($event)"
