tree node drag and drop

--- a/projects/icc/grid/src/_grid.component.theme.scss
+++ b/projects/icc/grid/src/_grid.component.theme.scss
@@ -78,6 +78,7 @@
     &-preview {
       background-color: orange;
       border: 1.5px dashed cyan;
+      overflow: hidden;
     }
 
     &-disabled {
