--- a/projects/icc/tree/src/components/tree-view.component.scss
+++ b/projects/icc/tree/src/components/tree-view.component.scss
@@ -7,3 +7,18 @@
     flex: 1;
   }
 }
+
+.icc-tree-drop-inside {
+  background-color: orange;
+  opacity: 0.4;
+}
+
+.icc-tree-drop-before {
+  border-top: 5px solid #00f;
+  margin-top: 5px;
+}
+
+.icc-tree-drop-after {
+  border-bottom: 5px solid red;
+  margin-bottom: 5px;
+}
