--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -4,6 +4,7 @@
     <button [routerLink]="[treeUrl]">Tree</button>
     <button [routerLink]="[formUrl]">Form</button>
     <button [routerLink]="[selectUrl]">Select</button>
+    <button [routerLink]="[menuUrl]">Menu</button>
     <button [routerLink]="[d3Url]">D3</button>
 
     <button (click)="toggleTheme()">Toggle Theme</button>
