--- a/projects/icc/menu/src/menu.component.html
+++ b/projects/icc/menu/src/menu.component.html
@@ -1,3 +1,22 @@
 <ng-container *ngFor="let item of items">
-  <icc-menu-item *ngIf="!item.hidden" [menuItem]="item" (click)="itemClicked($event, item)"> </icc-menu-item>
+  <icc-menu-item *ngIf="isLeafMenu(item)" [menuItem]="item" (click)="itemClicked($event, item)"> </icc-menu-item>
+
+  <span *ngIf="hasChildItem(item)">
+    <button
+      class="icc-menu-item icc-button"
+      [iccPopover]="menu"
+      [iccPopoverTrigger]="popoverTrigger"
+      [popoverLevel]="level + 1"
+      popoverPosition="bottomRight"
+    >
+      <i *ngIf="item.icon" [class]="item.icon"></i>
+      <span class="icc-menu-item-title"> {{ item.title }}</span>
+      <span class="icc-flex"></span>
+      <i class="fas fa-caret-right"></i>
+    </button>
+
+    <ng-template #menu>
+      <icc-menu [items]="item.children!" [level]="level + 1" (click)="itemClicked($event, item)"> </icc-menu>
+    </ng-template>
+  </span>
 </ng-container>
