change menu to menus

--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
@@ -16,13 +16,13 @@
   <div><br /></div>
   <div>
     Click Menu
-    <icc-menu [items]="menuItems"> </icc-menu>
+    <icc-menus [items]="menuItems"> </icc-menus>
   </div>
   <div><br /></div>
   <div><br /></div>
 
   <div>
     Context Menu
-    <icc-menu [items]="menuItems" [menuTrigger]="contextmenu"> </icc-menu>
+    <icc-menus [items]="menuItems" [menuTrigger]="contextmenu"> </icc-menus>
   </div>
 </div>
