--- a/projects/icc/menu/src/popover-menu.component.html
+++ b/projects/icc/menu/src/popover-menu.component.html
@@ -4,5 +4,5 @@
 </div>
 
 <ng-template #menu>
-  <icc-menu [items]="menuItem.children!" [level]="level + 1" (click)="onMenuItemChanged($event)"> </icc-menu>
+  <icc-menus [items]="menuItem.children!" [level]="level + 1" (click)="onMenuItemChanged($event)"> </icc-menus>
 </ng-template>
