--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -20,7 +20,7 @@
         <i *ngIf="!accordionItem.expanded" class="fa-solid fa-chevron-down"></i>
       </div>
 
-      <icc-menu *ngIf="accordionItem.expanded" [items]="item.items"></icc-menu>
+      <icc-menus *ngIf="accordionItem.expanded" [items]="item.items"></icc-menus>
     </cdk-accordion-item>
   }
 </cdk-accordion>
