change menu to menus

--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
@@ -1,8 +1,7 @@
 <div>
   <div><br /></div>
 
-  <div>
-    No fieldConfig - use default field config with Local field config and local object options
+  <div [ngStyle]="{ width: '20px' }">
     <icc-popover-menu [menuItem]="testMenuItems"> </icc-popover-menu>
   </div>
 
