change menu to menus

--- a/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
+++ b/projects/icc-demo/src/app/views/menu/demos/simple-menu/simple-menu.component.html
@@ -1,6 +1,7 @@
 <div>
   <div><br /></div>
 
+  <div>Click Popover Menu</div>
   <div [ngStyle]="{ width: '20px' }">
     <icc-popover-menu [menuItem]="testMenuItems"> </icc-popover-menu>
   </div>
