add dashboard and portal

--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,5 +1,6 @@
 <icc-layout>
   <icc-layout-header>
+    <button [routerLink]="[dashboardUrl]">Dashboard</button>
     <button [routerLink]="[gridUrl]">Grid</button>
     <button [routerLink]="[treeUrl]">Tree</button>
     <button [routerLink]="[formUrl]">Form</button>
