--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -9,6 +9,8 @@
 @import "../../panel/src/panel.component.theme";
 @import "../../button/src/button.component.theme";
 
+@import "../../resize/src/resize.directive.theme";
+
 @import "../../calendar/src/calendar.component.theme";
 @import "../../calendar/src/weekdays/weekdays.component.theme";
 @import "../../calendar/src/month/month.component.theme";
@@ -25,6 +27,7 @@
   @include icc-radio-theme();
   @include icc-panel-theme();
   @include icc-button-theme();
+  @include icc-resize-directive-theme();
 
   @include icc-calendar-theme();
   @include icc-calendar-weekdays-theme();
