add dashboard and portal

--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -87,15 +87,8 @@
       ></div>
     </div>
   </div>
-  <!--
 
-    <div class="icc-dashbard-menu">
-      <icc-menu *ngIf="menuItems" [menuItemConfig]="menuItems">
-      </icc-menu>
-    </div>
-        -->
+  <div class="icc-dashbard-menu">
+    <icc-popover-menu *ngIf="menuItems" [menuItem]="menuItems"> </icc-popover-menu>
+  </div>
 </icc-panel>
-
-<!--
-   width="800px"
--->
