add dashboard and portal

--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,12 +1,12 @@
 <icc-layout>
   <icc-layout-header>
-    <button [routerLink]="[dashboardUrl]">Dashboard</button>
-    <button [routerLink]="[gridUrl]">Grid</button>
-    <button [routerLink]="[treeUrl]">Tree</button>
-    <button [routerLink]="[formUrl]">Form</button>
-    <button [routerLink]="[selectUrl]">Select</button>
-    <button [routerLink]="[menuUrl]">Menu</button>
-    <button [routerLink]="[d3Url]">D3</button>
+    <button [routerLink]="['dashboard']">Dashboard</button>
+    <button [routerLink]="['grid']">Grid</button>
+    <button [routerLink]="['tree']">Tree</button>
+    <button [routerLink]="['form']">Form</button>
+    <button [routerLink]="['select']">Select</button>
+    <button [routerLink]="['menu']">Menu</button>
+    <button [routerLink]="['d3']">D3</button>
 
     <button (click)="toggleTheme()">Toggle Theme</button>
 
