--- a/projects/icc-demo/src/app/views/menu/menu.component.html
+++ b/projects/icc-demo/src/app/views/menu/menu.component.html
@@ -1,3 +1,16 @@
+<icc-layout-panel-content class="app-content-container" [resizeable]="true">
+  <div start class="app-content-start">
+    <icc-accordion [items]="items"></icc-accordion>
+  </div>
+
+  <div middle class="app-content-middle">
+    <router-outlet></router-outlet>
+  </div>
+  <div class="app-content-end" end>Left Container</div>
+</icc-layout-panel-content>
+
+<!--
+
 <icc-layout-sidebar>
   <icc-accordion [items]="items"></icc-accordion>
 </icc-layout-sidebar>
@@ -5,3 +18,4 @@
 <icc-layout-center>
   <router-outlet></router-outlet>
 </icc-layout-center>
+-->
