--- a/projects/icc-demo/src/app/views/select/select.component.scss
+++ b/projects/icc-demo/src/app/views/select/select.component.scss
@@ -1,3 +1,18 @@
 :host {
   display: flex;
+  .app-content-container {
+    flex-direction: row;
+    overflow: hidden;
+    .app-content-start {
+      flex: 0 0 150px;
+      border: 1px solid blue;
+    }
+    .app-content-middle {
+      flex: 1 1 auto;
+      border: 1px solid blue;
+    }
+    .app-content-end {
+      flex: 0 0 200px;
+    }
+  }
 }
