--- a/projects/icc-demo/src/app/views/grid/grid.component.scss
+++ b/projects/icc-demo/src/app/views/grid/grid.component.scss
@@ -1,8 +1,9 @@
 :host {
   display: flex;
+  flex: 1;
 
   ::ng-deep icc-grid {
-    height: 600px;
+    //height: 600px;
     width: 1000px;
   }
 }
