--- a/projects/icc/layout-panel/src/layout-panel-content.component.scss
+++ b/projects/icc/layout-panel/src/layout-panel-content.component.scss
@@ -3,10 +3,12 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+  border: 1px solid magenta;
 
   ::ng-deep icc-layout-panel-content {
     flex-direction: row;
     overflow: hidden;
+    flex: 1 1 auto;
 
     div[start] {
       min-width: 150px;
@@ -15,12 +17,15 @@
     }
 
     div[middle] {
+      display: flex;
       flex: 1 1 auto;
       border: 1px solid orange;
+      //height: -webkit-fill-available;;
     }
 
     div[end] {
       flex: 0 0 200px;
+      border: 1px solid blue;
     }
   }
 
