--- a/projects/icc/layout-panel/src/layout-panel-content.component.scss
+++ b/projects/icc/layout-panel/src/layout-panel-content.component.scss
@@ -11,7 +11,7 @@
     flex: 1 1 auto;
 
     div[start] {
-      min-width: 150px;
+      min-width: 250px;
       width: 250px;
       border: 1px solid red;
     }
@@ -24,7 +24,9 @@
     }
 
     div[end] {
-      flex: 0 0 200px;
+      //flex: 0 0 200px;
+      width: 250px;
+      min-width: 250px;
       border: 1px solid blue;
     }
   }
