--- a/projects/icc/grid/src/components/grid-row/grid-row.component.html
+++ b/projects/icc/grid/src/components/grid-row/grid-row.component.html
@@ -1,7 +1,7 @@
 <icc-grid-cell
   *ngIf="gridConfig.rowSelection"
   class="icc-grid-cell-row-select"
-  [ngStyle]="{ height: gridConfig.rowHeight + 'px' }"
+  [ngStyle]="{ height: gridConfig.rowHeight + 'px', flex: '0 0 ' + selectColumnWidth, 'max-width': selectColumnWidth }"
 >
   <icc-row-select [isSelected]="selected" (selected)="toggleRowSelection()"> </icc-row-select>
 </icc-grid-cell>
