--- a/projects/icc/tree/src/components/tree-row/tree-row.component.html
+++ b/projects/icc/tree/src/components/tree-row/tree-row.component.html
@@ -1,7 +1,7 @@
 <icc-grid-cell
   *ngIf="treeConfig.rowSelection"
   class="icc-tree-cell-row-select"
-  [ngStyle]="{ height: treeConfig.rowHeight + 'px' }"
+  [ngStyle]="{ height: treeConfig.rowHeight + 'px', flex: '0 0 ' + selectColumnWidth, 'max-width': selectColumnWidth }"
 >
   <icc-row-select [isSelected]="selected" (selected)="toggleRowSelection()"> </icc-row-select>
 </icc-grid-cell>
