--- a/projects/icc/layout/src/layout-content.component.scss
+++ b/projects/icc/layout/src/layout-content.component.scss
@@ -5,7 +5,7 @@
   overflow: auto;
   border: 1px solid magenta;
 
-  ::ng-deep icc-layout-panel-content {
+  ::ng-deep icc-layout-content {
     flex-direction: row;
     overflow: hidden;
     flex: 1 1 auto;
