--- a/projects/icc/layout/src/layout.component.html
+++ b/projects/icc/layout/src/layout.component.html
@@ -1,7 +1,7 @@
-<ng-content select="icc-layout-panel-header"></ng-content>
+<ng-content select="icc-layout-header"></ng-content>
 <ng-content></ng-content>
-<ng-content select="icc-layout-panel-content"></ng-content>
-<ng-content select="icc-layout-panel-footer"></ng-content>
+<ng-content select="icc-layout-content"></ng-content>
+<ng-content select="icc-layout-footer"></ng-content>
 
 <div
   *ngIf="resizeable"
