--- a/projects/icc-demo/src/app/views/grid/grid.component.html
+++ b/projects/icc-demo/src/app/views/grid/grid.component.html
@@ -1,4 +1,4 @@
-<icc-layout-panel-content [resizeable]="true">
+<icc-layout-content [resizeable]="true">
   <div start>
     <icc-accordion [items]="items"></icc-accordion>
   </div>
@@ -9,4 +9,4 @@
   <!--
   <div end>Left Container</div>
     -->
-</icc-layout-panel-content>
+</icc-layout-content>
