--- a/projects/icc-demo/src/app/views/select/select.component.html
+++ b/projects/icc-demo/src/app/views/select/select.component.html
@@ -1,4 +1,4 @@
-<icc-layout-panel-content [resizeable]="true">
+<icc-layout-content [resizeable]="true">
   <div start>
     <icc-accordion [items]="items"></icc-accordion>
   </div>
@@ -7,4 +7,4 @@
     <router-outlet></router-outlet>
   </div>
   <div end>Left Container</div>
-</icc-layout-panel-content>
+</icc-layout-content>
