--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
 
   ::ng-deep {
-    icc-layout-panel-header {
+    icc-layout-header {
       display: flex;
       flex-direction: row;
       height: 50px;
@@ -13,7 +13,7 @@
       align-items: center;
     }
 
-    icc-layout-panel-footer {
+    icc-layout-footer {
       display: flex;
       z-index: 2;
       height: 30px;
