--- a/projects/icc/layout/src/layout-content.component.scss
+++ b/projects/icc/layout/src/layout-content.component.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   flex: 1 1 auto;
-  overflow: auto;
+  //overflow: auto;
+  overflow-x: hidden;
   border: 1px solid magenta;
 
   ::ng-deep div[start] {
