--- a/projects/icc/grid/src/components/grid-view.component.scss
+++ b/projects/icc/grid/src/components/grid-view.component.scss
@@ -1,10 +1,15 @@
 :host {
   display: flex;
-  //position: relative;
+  position: relative;
   flex-direction: column;
   height: -webkit-fill-available;
 
   cdk-virtual-scroll-viewport {
+    display: flex;
     flex: 1;
+
+    ::ng-deep .cdk-virtual-scroll-content-wrapper {
+      contain: unset;
+    }
   }
 }
