--- a/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
+++ b/projects/icc/grid/src/components/grid-header-view/grid-header-view.component.html
@@ -1,4 +1,4 @@
-<div class="grid-header-container" [ngStyle]="{ width: gridConfig.viewportWidth + 'px' }">
+<div class="grid-header-container" [ngStyle]="{ flex: '0 0 ' + tableWidth + 'px', 'max-width': tableWidth + 'px' }">
   <icc-grid-header
     [ngStyle]="{
       left: columnHeaderPosition + 'px',
