--- a/projects/icc/layout/src/layout-content.component.scss
+++ b/projects/icc/layout/src/layout-content.component.scss
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: row;
   flex: 1 1 auto;
-  //overflow: auto;
   overflow-x: hidden;
   border: 1px solid magenta;
 
   ::ng-deep div[start] {
-    min-width: 150px;
+    position: relative;
+    z-index: 1;
+    min-width: 100px;
     width: 250px;
     border: 1px solid red;
   }
@@ -20,9 +21,10 @@
   }
 
   ::ng-deep div[end] {
-    //flex: 0 0 200px;
+    position: relative;
+    z-index: 1;
     width: 250px;
-    min-width: 150px;
+    min-width: 100px;
     border: 1px solid blue;
   }
 
