--- a/projects/icc/portal/src/_portal.component.theme.scss
+++ b/projects/icc/portal/src/_portal.component.theme.scss
@@ -1,7 +1,8 @@
 @mixin icc-portal-component-theme() {
   //TODO
+  /*
   .icc-portal-text {
     background-color: icc-theme(icc-portal-background-color);
     color: icc-theme(icc-text-color);
-  }
+  }*/
 }
