--- a/projects/icc/layout/src/layout-content.component.scss
+++ b/projects/icc/layout/src/layout-content.component.scss
@@ -10,12 +10,14 @@
     min-width: 100px;
     width: 250px;
     border: 1px solid red;
+    height: -webkit-fill-available;
   }
 
   ::ng-deep div[middle] {
     display: flex;
     flex: 1 1 auto;
     border: 1px solid orange;
+    height: -webkit-fill-available;
   }
 
   ::ng-deep div[end] {
@@ -24,6 +26,7 @@
     width: 250px;
     min-width: 100px;
     border: 1px solid blue;
+    height: -webkit-fill-available;
   }
 
   .icc-content-resize-left,
