--- a/projects/icc-demo/src/app/views/dashboard/dashboard.component.html
+++ b/projects/icc-demo/src/app/views/dashboard/dashboard.component.html
@@ -1,10 +1,11 @@
-<icc-layout-content [resizeable]="true">
-  <div start>
+<icc-layout-horizontal [resizeable]="true">
+  <icc-layout-left>
     <icc-accordion [items]="items"></icc-accordion>
-  </div>
+  </icc-layout-left>
 
-  <div middle>
+  <icc-layout-center>
     <router-outlet></router-outlet>
-  </div>
-  <div end>Left Container</div>
-</icc-layout-content>
+  </icc-layout-center>
+
+  <icc-layout-right>Left Container</icc-layout-right>
+</icc-layout-horizontal>
