add horizontal layout

--- a/projects/icc-demo/src/app/views/dashboard/dashboard.component.html
+++ b/projects/icc-demo/src/app/views/dashboard/dashboard.component.html
@@ -7,5 +7,5 @@
     <router-outlet></router-outlet>
   </icc-layout-center>
 
-  <icc-layout-right>Left Container</icc-layout-right>
+  <icc-layout-right><div>Right Container</div></icc-layout-right>
 </icc-layout-horizontal>
