--- a/projects/icc/layout/src/_layout.component.theme.scss
+++ b/projects/icc/layout/src/_layout.component.theme.scss
@@ -1,11 +1,11 @@
 @mixin icc-layout-theme() {
   icc-layout,
   icc-layout-header,
-  icc-layout-content,
-  icc-layout-content div[start],
-  icc-layout-content div[middle],
-  icc-layout-content div[end],
-  icc-layout-footer {
+  icc-layout-footer,
+  icc-layout-horizontal,
+  icc-layout-left,
+  icc-layout-center,
+  icc-layout-right {
     background-color: var(--app-background-color);
     color: icc-theme(app-text-basic-color);
   }
