--- a/projects/icc/layout/src/layout-horizontal.component.scss
+++ b/projects/icc/layout/src/layout-horizontal.component.scss
@@ -4,36 +4,37 @@
   flex: 1 1 auto;
   overflow-x: hidden;
 
-  ::ng-deep icc-layout-left {
-    position: relative;
-    z-index: 1;
-    min-width: 100px;
-    width: 250px;
-    border: 1px solid red;
-    height: -webkit-fill-available;
-  }
+  ::ng-deep {
+    icc-layout-left {
+      position: relative;
+      z-index: 1;
+      min-width: 100px;
+      width: 250px;
+      border: 1px solid red;
+      height: -webkit-fill-available;
+    }
 
-  ::ng-deep icc-layout-center {
-    display: flex;
-    flex: 1 1 auto;
-    border: 1px solid orange;
-    height: -webkit-fill-available;
-  }
+    icc-layout-center {
+      display: flex;
+      flex: 1 1 auto;
+      border: 1px solid orange;
+      height: -webkit-fill-available;
+    }
 
-  ::ng-deep icc-layout-right {
-    position: relative;
-    z-index: 1;
-    width: 250px;
-    min-width: 100px;
-    border: 1px solid blue;
-    height: -webkit-fill-available;
+    icc-layout-right {
+      position: relative;
+      z-index: 1;
+      width: 250px;
+      min-width: 100px;
+      border: 1px solid blue;
+      height: -webkit-fill-available;
+    }
   }
 
   .icc-content-resize-left,
   .icc-content-resize-right {
     // cursor: col-resize;
     height: 100%;
-    // border-left: 1px solid darkgreen; // no need border
   }
 
   .icc-content-resize-left {
