add horizontal layout demo

--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -7,6 +7,7 @@
     <button [routerLink]="['select']">Select</button>
     <button [routerLink]="['menu']">Menu</button>
     <button [routerLink]="['d3']">D3</button>
+    <button [routerLink]="['layout']">Layout</button>
 
     <button (click)="toggleTheme()">Toggle Theme</button>
     <div class="theme">
