add horizontal layout demo

--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   position: relative; // for resize handle position
   flex-direction: column;
+  width: 100%;
 
   ::ng-deep {
     icc-layout-header {
